asm_tests/other_testfiles/invalid_files/error55.s
.name "MORO"
.comment "MORJESTA!"

lld,%12 , r12
